--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<div class="inner">
 							<img class="logo" src="./logo/fronthub-logo.png" alt="Fronthub" width="70">
 							<h2>Ежегодная конференция Fronthub</h2>
-							<p>12 ноября 2015, 11:00</p>
+							<p>12 ноября 2016, 11:00</p>
 							<p>«Хаб-Кафе», ТЦ «Спартак» <br/>
 									г.&nbsp;Ульяновск, ул.&nbsp;Железной Дивизии, 5Б</p>
 							<p>Вход свободный</p>
@@ -160,12 +160,12 @@
 									<h2 class="major">Спонсоры</h2>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/x-cart-logo.png" alt="" /></a>
+											<a href="https://www.x-cart.com/contact-us.html" class="image" target="_blank"><img src="images/x-cart-logo.jpg" alt="" /></a>
 											<h3 class="major">X-Cart</h3>
 											 <a href="https://www.x-cart.com/contact-us.html" class="special" target="_blank">x-cart.com</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/itech.png" alt="" /></a>
+											<a href="http://itech-group.ru/" class="image" target="_blank"><img src="images/itech.jpg" alt="" /></a>
 											<h3 class="major">ITECH GROUP</h3>
 											<a href="http://itech-group.ru/" class="special" target="_blank">itech-group.ru</a>
 										</article>
@@ -182,7 +182,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Связаться с нами</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>Вы можете связаться с нами с помощью соцсетей, а также обратиться к нам по электронной почте.</p>
 							<form method="post" action="#">
 								<div class="field">
 									<label for="name">Имя</label>
@@ -204,16 +204,16 @@
 								<li class="fa-home">
 									«Хаб-кафе», ТЦ «Спартак»<br />
 									г. Ульяновск, ул. Железной Дивизии, 5б<br />
-									12 ноября 2015, 11:00<br />
+									12 ноября 2016, 11:00<br />
 									Вход свободный
 								</li>
-								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="fa-envelope"><a href="mailto:frontendsu@gmail.com?subject=fronthub16">frontendsu@gmail.com</a></li>
+								<li class="fa-twitter"><a href="https://twitter.com/frontendsu" target="_blank">twitter.com/frontendsu</a></li>
+								<li class="fa-vk"><a href="https://vk.com/frontendsu" target="_blank">vk.com/frontendsu</a></li>
+								<li class="fa-instagram"><a href="https://www.instagram.com/fronthub" target="_blank">instagram.com/fronthub</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>Дизайн: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Дизайн: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
