--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
 -->
 <html>
 	<head>
-		<title>fronthub 2016</title>
+		<title>Fronthub 2016 - неожиданная конференция по фронтенду</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+		<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<style>
-	#menu, #header{
-		display: none !important;
-	}
-	</style>
 	<body>
 
 		<!-- Page Wrapper -->
@@ -37,8 +35,8 @@
 						<div class="inner">
 							<h2>Архив</h2>
 							<ul class="links">
-								<li><a href="index.html">fronthub 2015</a></li>
-								<li><a href="index.html">fronthub 2014</a></li>
+								<li><a href="http://2014.front-end.su/">Fronthub 2014</a></li>
+								<li><a href="http://2015.front-end.su/">Fronthub 2015</a></li>
 							</ul>
 							<a href="#" class="close">Закрыть</a>
 						</div>
@@ -65,7 +63,7 @@
 									<a href="#" class="image"><img src="images/shoot.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">ОБЩИЙ ЯЗЫК С ДИЗАЙНЕРОМ. РИТМ!</h2>
-										<p>МИХАИЛ СИНЯКОВ from X-Cart</p>
+										<p>Михаил Синяков, X-Cart (Ульяновск)</p>
 										<p>
 											Как я ругался с дизайнерами, а потом мы стали друзьями. <br>
 											Зачем усложнять жизнь дополнительной абстракцией?<br>
@@ -82,7 +80,7 @@
 									<a href="#" class="image"><img src="images/denis.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Название доклада уточняется</h2>
-										<p>Денис Ежков from Itech</p>
+										<p>Денис Ежков, Itech.group (Ульяновск)</p>
 										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -95,7 +93,7 @@
 									<a href="http://nikbelikov.ru/" class="image"><img src="images/nikbelikov.jpg" alt="" /></a>
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
-										<p>Николай Беликов from Restream</p>
+										<p>Николай Беликов, Restream (Ульяновск)</p>
 										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 										 <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
@@ -109,7 +107,7 @@
 									<a href="#" class="image"><img src="images/kostya.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Про JS</h2>
-										<p>Константин Макарычев from Provectus (Казань)</p>
+										<p>Константин Макарычев, Provectus (Казань)</p>
 										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 									</div>
@@ -122,7 +120,7 @@
 									<a href="#" class="image"><img src="images/oleg.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">CSS Modules</h2>
-										<p>Олег Наянов from DZ Systems</p>
+										<p>Олег Наянов, DZ Systems (Ульяновск)</p>
 										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 									</div>
@@ -135,7 +133,7 @@
 									<a href="#" class="image"><img src="images/bogdan.jpg" alt="" /></a>
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
-										<p>Богдан Руденко from Restream (Москва)</p>
+										<p>Богдан Руденко, Restream (Москва)</p>
 										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 									</div>
@@ -148,7 +146,7 @@
 									<a href="#" class="image"><img src="images/yarik.jpg" alt="" /></a>
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
-										<p>Ярослав Трегубов from PRO100</p>
+										<p>Ярослав Трегубов, PRO100 (Ульяновск)</p>
 										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
 										<!-- <p>Описание</p> -->
 									</div>
