--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/shoot.jpg" alt="" /></a>
+									<a href="#" class="image">
+										<picture>
+											<source srcset="images/shoot.webp" type="image/webp">
+											<img src="images/shoot.jpg" alt="Михаил Синяков" />
+										</picture>
+									</a>
 									<div class="content">
 										<h2 class="major">ОБЩИЙ ЯЗЫК С ДИЗАЙНЕРОМ. РИТМ!</h2>
 										<p>Михаил Синяков, X-Cart (Ульяновск)</p>
@@ -77,7 +82,12 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/denis.jpg" alt="" /></a>
+									<a href="#" class="image">
+										<picture>
+											<source srcset="images/denis.webp" type="image/webp">
+											<img src="images/denis.jpg" alt="Денис Ежков" />
+										</picture>
+									</a>
 									<div class="content">
 										<h2 class="major">Название доклада уточняется</h2>
 										<p>Денис Ежков, Itech.group (Ульяновск)</p>
@@ -90,7 +100,12 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="http://nikbelikov.ru/" class="image"><img src="images/nikbelikov.jpg" alt="" /></a>
+									<a href="http://nikbelikov.ru/" class="image">
+										<picture>
+											<source srcset="images/nikbelikov.webp" type="image/webp">
+											<img src="images/nikbelikov.jpg" alt="Николай Беликов" />
+										</picture>
+									</a>
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
 										<p>Николай Беликов, Restream (Ульяновск)</p>
@@ -104,7 +119,12 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/kostya.jpg" alt="" /></a>
+									<a href="#" class="image">
+										<picture>
+											<source srcset="images/kostya.webp" type="image/webp">
+											<img src="images/kostya.jpg" alt="Константин Макарычев" />
+										</picture>
+									</a>
 									<div class="content">
 										<h2 class="major">Про JS</h2>
 										<p>Константин Макарычев, Provectus (Казань)</p>
@@ -117,7 +137,12 @@
 						<!-- Five -->
 							<section id="five" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/oleg.jpg" alt="" /></a>
+									<a href="#" class="image">
+										<picture>
+											<source srcset="images/oleg.webp" type="image/webp">
+											<img src="images/oleg.jpg" alt="Олег Наянов" />
+										</picture>
+									</a>
 									<div class="content">
 										<h2 class="major">CSS Modules</h2>
 										<p>Олег Наянов, DZ Systems (Ульяновск)</p>
@@ -130,7 +155,12 @@
 						<!-- Six -->
 							<section id="six" class="wrapper alt spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/bogdan.jpg" alt="" /></a>
+									<a href="#" class="image">
+										<picture>
+											<source srcset="images/bogdan.webp" type="image/webp">
+											<img src="images/bogdan.jpg" alt="Богдан Руденко" />
+										</picture>
+									</a>
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
 										<p>Богдан Руденко, Restream (Москва)</p>
@@ -143,7 +173,12 @@
 						<!-- Seven -->
 							<section id="seven" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/yarik.jpg" alt="" /></a>
+									<a href="#" class="image">
+										<picture>
+											<source srcset="images/yarik.webp" type="image/webp">
+											<img src="images/yarik.jpg" alt="Ярослав Трегубов" />
+										</picture>
+									</a>
 									<div class="content">
 										<h2>Название доклада уточняется</h2>
 										<p>Ярослав Трегубов, PRO100 (Ульяновск)</p>
@@ -158,12 +193,22 @@
 									<h2 class="major">Спонсоры</h2>
 									<section class="features">
 										<article>
-											<a href="https://www.x-cart.com/contact-us.html" class="image" target="_blank"><img src="images/x-cart-logo.jpg" alt="" /></a>
+											<a href="https://www.x-cart.com/contact-us.html" class="image" target="_blank">
+												<picture>
+													<source srcset="images/x-cart-logo.webp" type="image/webp">
+													<img src="images/x-cart-logo.jpg" alt="X-Cart logo" />
+												</picture>
+											</a>
 											<h3 class="major">X-Cart</h3>
 											 <a href="https://www.x-cart.com/contact-us.html" class="special" target="_blank">x-cart.com</a>
 										</article>
 										<article>
-											<a href="http://itech-group.ru/" class="image" target="_blank"><img src="images/itech.jpg" alt="" /></a>
+											<a href="http://itech-group.ru/" class="image" target="_blank">
+												<picture>
+													<source srcset="images/itech.webp" type="image/webp">
+													<img src="images/itech.jpg" alt="itech group logo" />
+												</picture>
+											</a>
 											<h3 class="major">ITECH GROUP</h3>
 											<a href="http://itech-group.ru/" class="special" target="_blank">itech-group.ru</a>
 										</article>
