--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 		<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<script src="assets/js/modernizr-custom.js"></script>
 	</head>
 	<body>
 
@@ -24,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">fronthub</a></h1>
+						<h1><a href="index.html">Fronthub 2016</a></h1>
 						<nav>
 							<a href="#menu">Архив</a>
 						</nav>
@@ -256,7 +255,7 @@
 								<li class="fa-instagram"><a href="https://www.instagram.com/fronthub" target="_blank">instagram.com/fronthub</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>Дизайн: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+								<li>Fronthub 2014-2016 &copy; Дизайн: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
