--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<h2>Архив</h2>
 							<ul class="links">
 								<li><a href="http://2014.front-end.su/">Fronthub 2014</a></li>
-								<li><a href="http://2015.front-end.su/">Fronthub 2015</a></li>
+								<li><a href="http://2015.fronthub.ru/">Fronthub 2015</a></li>
 							</ul>
 							<a href="#" class="close">Закрыть</a>
 						</div>
@@ -50,6 +50,7 @@
 							<p>«Хаб-Кафе», ТЦ «Спартак» <br/>
 									г.&nbsp;Ульяновск, ул.&nbsp;Железной Дивизии, 5Б</p>
 							<p>Вход свободный</p>
+							<a href="#reg">Регистрация</a>
 						</div>
 					</section>
 
@@ -78,45 +79,9 @@
 								</div>
 							</section>
 
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image">
-										<picture>
-											<source srcset="images/denis.webp" type="image/webp">
-											<img src="images/denis.jpg" alt="Денис Ежков" />
-										</picture>
-									</a>
-									<div class="content">
-										<h2 class="major">Название доклада уточняется</h2>
-										<p>Денис Ежков, Itech.group (Ульяновск)</p>
-										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
-										<!-- <a href="#" class="special">Learn more</a> -->
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="http://nikbelikov.ru/" class="image">
-										<picture>
-											<source srcset="images/nikbelikov.webp" type="image/webp">
-											<img src="images/nikbelikov.jpg" alt="Николай Беликов" />
-										</picture>
-									</a>
-									<div class="content">
-										<h2>Название доклада уточняется</h2>
-										<p>Николай Беликов, Restream (Ульяновск)</p>
-										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
-										<!-- <p>Описание</p> -->
-										 <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
-									</div>
-								</div>
-							</section>
 
 						<!-- Four -->
-							<section id="four" class="wrapper alt spotlight style1">
+							<section id="four" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<a href="#" class="image">
 										<picture>
@@ -125,16 +90,16 @@
 										</picture>
 									</a>
 									<div class="content">
-										<h2 class="major">Про JS</h2>
+										<h2 class="major">Не быстрый старт с angular 2</h2>
 										<p>Константин Макарычев, Provectus (Казань)</p>
-										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
+										<p>Поговорим, как начать разрабатывать на angular 2, как настроить окружение, и что делать с этим дальше. Помимо этого обсудим typescript и es6, другие фреймворки и всё такое.</p>
 										<!-- <p>Описание</p> -->
 									</div>
 								</div>
 							</section>
 
 						<!-- Five -->
-							<section id="five" class="wrapper spotlight style2">
+							<section id="five" class="wrapper spotlight style3">
 								<div class="inner">
 									<a href="#" class="image">
 										<picture>
@@ -145,32 +110,14 @@
 									<div class="content">
 										<h2 class="major">CSS Modules</h2>
 										<p>Олег Наянов, DZ Systems (Ульяновск)</p>
-										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
-										<!-- <p>Описание</p> -->
-									</div>
-								</div>
-							</section>
-
-						<!-- Six -->
-							<section id="six" class="wrapper alt spotlight style3">
-								<div class="inner">
-									<a href="#" class="image">
-										<picture>
-											<source srcset="images/bogdan.webp" type="image/webp">
-											<img src="images/bogdan.jpg" alt="Богдан Руденко" />
-										</picture>
-									</a>
-									<div class="content">
-										<h2>Название доклада уточняется</h2>
-										<p>Богдан Руденко, Restream (Москва)</p>
-										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
+										<p>Попытаемся победить глобальную область видимости в CSS. Страх, ненависть, ошибки, БЭМ, PostCSS, PostHTML - будет все!</p>
 										<!-- <p>Описание</p> -->
 									</div>
 								</div>
 							</section>
 
 						<!-- Seven -->
-							<section id="seven" class="wrapper spotlight style1">
+							<section id="seven" class="wrapper alt spotlight style1">
 								<div class="inner">
 									<a href="#" class="image">
 										<picture>
@@ -179,13 +126,50 @@
 										</picture>
 									</a>
 									<div class="content">
-										<h2>Название доклада уточняется</h2>
+										<h2>Типографика - такая страшная или прекрасная</h2>
 										<p>Ярослав Трегубов, PRO100 (Ульяновск)</p>
-										<p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p>
+										<p>Расскажу как работать со шрифтами - от дизайна, до фронтенда</p>
 										<!-- <p>Описание</p> -->
 									</div>
 								</div>
 							</section>
+
+							<!-- Two -->
+								<section id="two" class="wrapper spotlight style2">
+									<div class="inner">
+										<a href="#" class="image">
+											<picture>
+												<source srcset="images/denis.webp" type="image/webp">
+												<img src="images/denis.jpg" alt="Денис Ежков" />
+											</picture>
+										</a>
+										<div class="content">
+											<h2 class="major">Название доклада уточняется</h2>
+											<p>Денис Ежков, Itech.group (Ульяновск)</p>
+											<!-- <p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p> -->
+											<!-- <a href="#" class="special">Learn more</a> -->
+										</div>
+									</div>
+								</section>
+
+							<!-- Three -->
+								<section id="three" class="wrapper alt spotlight style3">
+									<div class="inner">
+										<a href="http://nikbelikov.ru/" class="image">
+											<picture>
+												<source srcset="images/nikbelikov.webp" type="image/webp">
+												<img src="images/nikbelikov.jpg" alt="Николай Беликов" />
+											</picture>
+										</a>
+										<div class="content">
+											<h2>Название доклада уточняется</h2>
+											<p>Николай Беликов, Restream (Ульяновск)</p>
+											<!-- <p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p> -->
+											<!-- <p>Описание</p> -->
+											 <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
+										</div>
+									</div>
+								</section>
 
 							<section id="" class="wrapper alt style1">
 								<div class="inner">
@@ -211,6 +195,16 @@
 											<h3 class="major">ITECH GROUP</h3>
 											<a href="http://itech-group.ru/" class="special" target="_blank">itech-group.ru</a>
 										</article>
+										<article>
+											<a href="http://itech-group.ru/" class="image" target="_blank">
+												<picture>
+													<source srcset="images/restream.webp" type="image/webp">
+													<img src="images/restream.png" alt="restream logo" />
+												</picture>
+											</a>
+											<h3 class="major">Рестрим</h3>
+											<a href="http://restream.rt.ru/" class="special" target="_blank">restream.rt.ru</a>
+										</article>
 									</section>
 									<ul class="actions">
 										<li><a href="mailto:frontendsu@gmail.com?subject=fronthub16" class="button">Стать спонсором</a></li>
@@ -223,6 +217,79 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
+							<h2 class="major" id="reg">Регистрация</h2>
+							<!-- Begin MailChimp Signup Form -->
+							<link href="http://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+							<style type="text/css">
+								#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+								/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+									 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+							</style>
+							<div id="mc_embed_signup">
+							<form action="http://front-end.us14.list-manage.com/subscribe/post?u=74faa70f07b2c214ce2bb3527&amp;id=78a4fd8374" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate reg" target="_blank" novalidate>
+									<div id="mc_embed_signup_scroll">
+								<div>
+							<p>Привет!</p>
+							<p>Чтобы зарегистрироваться на конференции оставь свой email. Он нужен нам для статистики или если мы решим устроить розыгрыш подарков.  Обязательным является только поле email. Все остальные поля заполняются по желанию, в том случае, если тебе интересны предложения о работе от наших спонсоров. Мы передадим контакты только тех, кто поставит соответствующую галочку внизу.</p>
+							<p>При желании можно еще подписаться на нашу рассылку. Пока не чаще раза в месяц мы будем присылать письмо с опросами, анонсами мероприятий или просто новостями из мира фронтенда.</p>
+								</div>
+							<div class="indicates-required"><span class="asterisk">*</span> обязательные поля</div>
+							<div class="mc-field-group">
+								<label for="mce-EMAIL">Email  <span class="asterisk">*</span>
+							</label>
+								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+							</div>
+							<div class="mc-field-group">
+								<label for="mce-FNAME">Имя </label>
+								<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+							</div>
+							<div class="mc-field-group">
+								<label for="mce-LNAME">Фамилия </label>
+								<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-MMERGE3">Номер телефона </label>
+								<input type="text" name="MMERGE3" class="" value="" id="mce-MMERGE3">
+							</div>
+							<div class="mc-field-group input-group">
+									<strong>Подтверждения </strong>
+									<ul><li><input type="checkbox" value="1" name="group[1125][1]" id="mce-group[1125]-1125-0"><label for="mce-group[1125]-1125-0">Подписаться на рассылку</label></li>
+							<li><input type="checkbox" value="2" name="group[1125][2]" id="mce-group[1125]-1125-1"><label for="mce-group[1125]-1125-1">Мне интересны предложения о работе</label></li>
+							</ul>
+							</div>
+								<div id="mce-responses" class="clear">
+									<div class="response" id="mce-error-response" style="display:none"></div>
+									<div class="response" id="mce-success-response" style="display:none"></div>
+								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+									<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_74faa70f07b2c214ce2bb3527_78a4fd8374" tabindex="-1" value=""></div>
+									<div class="clear"><input type="submit" value="Отправить" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+									</div>
+							</form>
+							</div>
+							<script type='text/javascript' src='http://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='phone'; /*
+							 * Translated default messages for the $ validation plugin.
+							 * Locale: RU
+							 */
+							$.extend($.validator.messages, {
+											required: "Это поле необходимо заполнить.",
+											remote: "Пожалуйста, введите правильное значение.",
+											email: "Пожалуйста, введите корректный адрес электронной почты.",
+											url: "Пожалуйста, введите корректный URL.",
+											date: "Пожалуйста, введите корректную дату.",
+											dateISO: "Пожалуйста, введите корректную дату в формате ISO.",
+											number: "Пожалуйста, введите число.",
+											digits: "Пожалуйста, вводите только цифры.",
+											creditcard: "Пожалуйста, введите правильный номер кредитной карты.",
+											equalTo: "Пожалуйста, введите такое же значение ещё раз.",
+											accept: "Пожалуйста, выберите файл с правильным расширением.",
+											maxlength: $.validator.format("Пожалуйста, введите не больше {0} символов."),
+											minlength: $.validator.format("Пожалуйста, введите не меньше {0} символов."),
+											rangelength: $.validator.format("Пожалуйста, введите значение длиной от {0} до {1} символов."),
+											range: $.validator.format("Пожалуйста, введите число от {0} до {1}."),
+											max: $.validator.format("Пожалуйста, введите число, меньшее или равное {0}."),
+											min: $.validator.format("Пожалуйста, введите число, большее или равное {0}.")
+							});}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+							<!--End mc_embed_signup-->
 							<h2 class="major">Связаться с нами</h2>
 							<p>Вы можете связаться с нами с помощью соцсетей, а также обратиться к нам по электронной почте.</p>
 							<form method="post" action="#">
