--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<section id="wrapper">
 
 						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
+							<section id="one" class="wrapper alt spotlight style1">
 								<div class="inner">
 									<a href="#" class="image">
 										<picture>
@@ -81,7 +81,7 @@
 
 
 						<!-- Four -->
-							<section id="four" class="wrapper alt spotlight style2">
+							<section id="four" class="wrapper spotlight style2">
 								<div class="inner">
 									<a href="#" class="image">
 										<picture>
@@ -99,7 +99,7 @@
 							</section>
 
 						<!-- Five -->
-							<section id="five" class="wrapper spotlight style3">
+							<section id="five" class="wrapper alt spotlight style3">
 								<div class="inner">
 									<a href="#" class="image">
 										<picture>
@@ -117,7 +117,7 @@
 							</section>
 
 						<!-- Seven -->
-							<section id="seven" class="wrapper alt spotlight style1">
+							<section id="seven" class="wrapper spotlight style1">
 								<div class="inner">
 									<a href="#" class="image">
 										<picture>
@@ -135,7 +135,7 @@
 							</section>
 
 							<!-- Two -->
-								<section id="two" class="wrapper spotlight style2">
+								<section id="two" class="wrapper alt spotlight style2">
 									<div class="inner">
 										<a href="#" class="image">
 											<picture>
@@ -153,7 +153,7 @@
 								</section>
 
 							<!-- Three -->
-								<section id="three" class="wrapper alt spotlight style3">
+								<section id="three" class="wrapper spotlight style1">
 									<div class="inner">
 										<a href="http://nikbelikov.ru/" class="image">
 											<picture>
