--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<p>«Хаб-Кафе», ТЦ «Спартак» <br/>
 									г.&nbsp;Ульяновск, ул.&nbsp;Железной Дивизии, 5Б</p>
 							<p>Вход свободный</p>
-							<a href="#reg">Регистрация</a>
+							<a href="#footer">РЕГИСТРАЦИЯ</a>
 						</div>
 					</section>
 
@@ -224,20 +224,20 @@
 							<form action="http://front-end.us14.list-manage.com/subscribe/post?u=74faa70f07b2c214ce2bb3527&amp;id=78a4fd8374" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate reg" target="_blank" novalidate>
 								<div id="mc_embed_signup_scroll">
 									<div class="field">
-										<label for="mce-EMAIL">Email  <span class="asterisk">*</span>
+										<label for="mce-EMAIL">Email<span class="asterisk">*</span>:
 										</label>
 										<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 									</div>
 									<div class="field">
-										<label for="mce-FNAME">Имя </label>
+										<label for="mce-FNAME">Имя:</label>
 										<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
 									</div>
 									<div class="field">
-										<label for="mce-LNAME">Фамилия </label>
+										<label for="mce-LNAME">Фамилия:</label>
 										<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
 									</div>
 									<div class="field size1of2">
-										<label for="mce-MMERGE3">Номер телефона </label>
+										<label for="mce-MMERGE3">Номер телефона:</label>
 										<input type="text" name="MMERGE3" class="" value="" id="mce-MMERGE3">
 									</div>
 									<p class="indicates-required"><span class="asterisk">*</span> обязательные поля</p>
