--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 							<h2 class="major">Регистрация</h2>
 							<p>Чтобы зарегистрироваться на конференции оставь свой email. Он нужен нам для статистики или если мы решим устроить розыгрыш подарков.  Обязательным является только поле email. Все остальные поля заполняются по желанию, в том случае, если тебе интересны предложения о работе от наших спонсоров. Мы передадим контакты только тех, кто поставит соответствующую галочку внизу.</p>
 							<p>При желании можно еще подписаться на нашу рассылку. Пока не чаще раза в месяц мы будем присылать письмо с опросами, анонсами мероприятий или просто новостями из мира фронтенда.</p>
-							<p>Еще вы можете связаться с нами с помощью соцсетей, а также обратиться к нам по электронной почте.</p>
+							<p>Еще вы можете связаться с нами с помощью соцсетей, а также обратиться по электронной почте.</p>
 							<form action="http://front-end.us14.list-manage.com/subscribe/post?u=74faa70f07b2c214ce2bb3527&amp;id=78a4fd8374" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate reg" target="_blank" novalidate>
 								<div id="mc_embed_signup_scroll">
 									<div class="field">
