--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 										<input type="text" name="MMERGE3" class="" value="" id="mce-MMERGE3">
 									</div>
 									<p class="indicates-required"><span class="asterisk">*</span> обязательные поля</p>
-									<div class="field input-group">
+									<div class="input-group">
 										<ul class="list"><li><input type="checkbox" value="1" name="group[1125][1]" id="mce-group[1125]-1125-0"><label for="mce-group[1125]-1125-0">Подписаться на рассылку</label></li>
 											<li><input type="checkbox" value="2" name="group[1125][2]" id="mce-group[1125]-1125-1"><label for="mce-group[1125]-1125-1">Мне интересны предложения о работе</label></li>
 										</ul>
