--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <!-- Three -->
                 <section id="three" class="wrapper spotlight style1">
                   <div class="inner">
-                    <a href="http://nikbelikov.ru/" class="image">
+                    <a href="http://nikbelikov.ru/" class="image" target="_blank">
                       <picture>
                         <source srcset="images/nikbelikov.webp" type="image/webp">
                         <img src="images/nikbelikov.jpg" alt="Николай Беликов" />
@@ -196,7 +196,7 @@
                       <a href="http://itech-group.ru/" class="special" target="_blank">itech-group.ru</a>
                     </article>
                     <article>
-                      <a href="http://itech-group.ru/" class="image" target="_blank">
+                      <a href="http://restream.rt.ru/" class="image" target="_blank">
                         <picture>
                           <source srcset="images/restream.webp" type="image/webp">
                           <img src="images/restream.png" alt="restream logo" />
