--- a/index.html
+++ b/index.html
@@ -219,6 +219,20 @@
                       <h3 class="major">Ecwid</h3>
                       <a href="https://www.ecwid.ru/join" class="special" target="_blank">ecwid.ru</a>
                     </article>
+                    <article>
+                      <a
+                        href="http://simtech.ru/"
+                        class="image"
+                        target="_blank"
+                        style="background-color: white; padding: 20px;"
+                        >
+                        <picture>
+                          <img src="images/simtech.png" alt="simtech logo" />
+                        </picture>
+                      </a>
+                      <h3 class="major">Simtech</h3>
+                      <a href="http://simtech.ru/" class="special" target="_blank">simtech.ru</a>
+                    </article>
                   </section>
                   <ul class="actions">
                     <li><a href="mailto:frontendsu@gmail.com?subject=fronthub16" class="button">Стать спонсором</a></li>
