--- a/index.html
+++ b/index.html
@@ -233,6 +233,19 @@
                       <h3 class="major">Simtech</h3>
                       <a href="http://simtech.ru/" class="special" target="_blank">simtech.ru</a>
                     </article>
+                    <article>
+                      <a
+                        href="http://www.supportix.ru/"
+                        class="image"
+                        target="_blank"
+                        >
+                        <picture>
+                          <img src="images/supportix.jpg" alt="supportix logo" />
+                        </picture>
+                      </a>
+                      <h3 class="major">Supportix</h3>
+                      <a href="http://www.supportix.ru/" class="special" target="_blank">supportix.ru</a>
+                    </article>
                   </section>
                   <ul class="actions">
                     <li><a href="mailto:frontendsu@gmail.com?subject=fronthub16" class="button">Стать спонсором</a></li>
@@ -282,7 +295,8 @@
                   <div class="clear"><input type="submit" value="Отправить" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                 </div>
               </form>
-              <script type='text/javascript' src='http://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='phone'; /*
+              <script src="http://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+              <script >(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='phone'; /*
              * Translated default messages for the $ validation plugin.
              * Locale: RU
              */
