--- a/index.html
+++ b/index.html
@@ -162,10 +162,9 @@
                       </picture>
                     </a>
                     <div class="content">
-                      <h2>Название доклада уточняется</h2>
+                      <h2>Немного о сжатии изображений</h2>
                       <p>Николай Беликов, Restream (Ульяновск)</p>
-                      <!-- <p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p> -->
-                      <!-- <p>Описание</p> -->
+                      <p>Оптимизация растра - извечная проблема, но все же хочется поделиться некоторыми вещами, о которых почему-то многие молчат.</p>
                        <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
                     </div>
                   </div>
