--- a/index.html
+++ b/index.html
@@ -144,10 +144,9 @@
                       </picture>
                     </a>
                     <div class="content">
-                      <h2 class="major">Название доклада уточняется</h2>
+                      <h2 class="major">Путь падавана. Как стать web-разработчиком и не поседеть?</h2>
                       <p>Денис Ежков, Itech.group (Ульяновск)</p>
-                      <!-- <p>Описание доклада уточняется Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, aliquid amet culpa distinctio dolores dolorum eos eum facilis fugiat fugit harum illo illum molestiae nesciunt, numquam odit placeat temporibus unde!</p> -->
-                      <!-- <a href="#" class="special">Learn more</a> -->
+                      <p>Динамика изменений в web-разработке одна из самых высоких. С чего начать и куда двигаться? Как не запутаться в технологических направлениях и понять их перспективы? Какие есть тренды в веб-разработке? Поговорим на эти и другие смежные темы.</p>
                     </div>
                   </div>
                 </section>
