новый докладчик, поправлены ошибки в тексте

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <div class="content">
                     <h2 class="major">Не быстрый старт с angular 2</h2>
                     <p>Константин Макарычев, Provectus (Казань)</p>
-                    <p>Поговорим, как начать разрабатывать на angular 2, как настроить окружение, и что делать с этим дальше. Помимо этого обсудим typescript и es6, другие фреймворки и всё такое.</p>
+                    <p>Поговорим, как начать разрабатывать на angular 2, как настроить окружение и что делать с этим дальше. Помимо этого обсудим typescript и es6, другие фреймворки и всё такое.</p>
                     <!-- <p>Описание</p> -->
                   </div>
                 </div>
@@ -128,7 +128,7 @@
                   <div class="content">
                     <h2>Типографика - такая страшная или прекрасная</h2>
                     <p>Ярослав Трегубов, PRO100 (Ульяновск)</p>
-                    <p>Расскажу как работать со шрифтами - от дизайна, до фронтенда</p>
+                    <p>Расскажу как работать со шрифтами - от дизайна до фронтенда</p>
                     <!-- <p>Описание</p> -->
                   </div>
                 </div>
@@ -152,7 +152,7 @@
                 </section>
 
               <!-- Three -->
-                <section id="three" class="wrapper spotlight style1">
+                <section id="three" class="wrapper spotlight style3">
                   <div class="inner">
                     <a href="http://nikbelikov.ru/" class="image" target="_blank">
                       <picture>
@@ -169,7 +169,23 @@
                   </div>
                 </section>
 
-              <section id="" class="wrapper alt style1">
+                <section id="three" class="wrapper spotlight alt style1">
+                  <div class="inner">
+                    <a href="#" class="image">
+                      <picture>
+                        <source srcset="images/dikmarov.webp" type="image/webp">
+                        <img src="images/dikmarov.jpg" alt="Артём Дикмаров" />
+                      </picture>
+                    </a>
+                    <div class="content">
+                      <h2>Сверхбыстрая вёрстка: от макета до Production</h2>
+                      <p>Артём Дикмаров, Simtech Development (Ульяновск)</p>
+                      <p>Максимальное ускорение своей работы. Как можно превысить все несуществующие лимиты в вёрстке сайтов? Как не потерять качество? Собственные кейсы, факапы и просто интересные истории.</p>
+                    </div>
+                  </div>
+                </section>
+
+              <section id="" class="wrapper style2">
                 <div class="inner">
                   <h2 class="major">Спонсоры</h2>
                   <section class="features">
