--- a/index.html
+++ b/index.html
@@ -185,6 +185,21 @@
                   </div>
                 </section>
 
+                <section id="three" class="wrapper spotlight style3">
+                  <div class="inner">
+                    <a href="http://nikbelikov.ru/" class="image" target="_blank">
+                      <picture>
+                        <img src="images/ss.jpg" alt="Фазульянов Роман / Бабич Татьяна" />
+                      </picture>
+                    </a>
+                    <div class="content">
+                      <h2>Оптимальный во всех смыслах</h2>
+                      <p>Фазульянов Роман / Бабич Татьяна, Simbirsoft (Ульяновск)</p>
+                      <p>Как писать на реакт удобно и быстро</p>
+                    </div>
+                  </div>
+                </section>
+
               <section id="" class="wrapper style2">
                 <div class="inner">
                   <h2 class="major">Спонсоры</h2>
