--- a/index.html
+++ b/index.html
@@ -260,6 +260,19 @@
                       <h3 class="major">Supportix</h3>
                       <a href="http://www.supportix.ru/" class="special" target="_blank">supportix.ru</a>
                     </article>
+                    <article>
+                      <a
+                        href="http://mstagency.ru/"
+                        class="image"
+                        target="_blank"
+                        >
+                        <picture>
+                          <img src="images/mst_logo.jpg" alt="mst logo" />
+                        </picture>
+                      </a>
+                      <h3 class="major">MST</h3>
+                      <a href="http://mstagency.ru/" class="special" target="_blank">mstagency.ru</a>
+                    </article>
                   </section>
                   <ul class="actions">
                     <li><a href="mailto:frontendsu@gmail.com?subject=fronthub16" class="button">Стать спонсором</a></li>
