Change speakers direction

--- a/index.html
+++ b/index.html
@@ -57,6 +57,39 @@
         <!-- Wrapper -->
           <section id="wrapper">
 
+              <section id="two" class="wrapper alt spotlight style1">
+                <div class="inner">
+                  <a href="#" class="image">
+                    <picture>
+                      <source srcset="images/denis.webp" type="image/webp">
+                      <img src="images/denis.jpg" alt="Денис Ежков" />
+                    </picture>
+                  </a>
+                  <div class="content">
+                    <h2 class="major">Путь падавана. Как стать web-разработчиком и не поседеть?</h2>
+                    <p>Денис Ежков, Itech.group (Ульяновск)</p>
+                    <p>Динамика изменений в web-разработке одна из самых высоких. С чего начать и куда двигаться? Как не запутаться в технологических направлениях и понять их перспективы? Какие есть тренды в веб-разработке? Поговорим на эти и другие смежные темы.</p>
+                  </div>
+                </div>
+              </section>
+
+              <section id="three" class="wrapper spotlight style2">
+                <div class="inner">
+                  <a href="#" class="image">
+                    <picture>
+                      <source srcset="images/dikmarov.webp" type="image/webp">
+                      <img src="images/dikmarov.jpg" alt="Артём Дикмаров" />
+                    </picture>
+                  </a>
+                  <div class="content">
+                    <h2>Сверхбыстрая вёрстка: от макета до Production</h2>
+                    <p>Артём Дикмаров, Simtech Development (Ульяновск)</p>
+                    <p>Максимальное ускорение своей работы. Как можно превысить все несуществующие лимиты в вёрстке сайтов? Как не потерять качество? Собственные кейсы, факапы и просто интересные истории.</p>
+                  </div>
+                </div>
+              </section>
+
+
             <!-- One -->
               <section id="one" class="wrapper alt spotlight style1">
                 <div class="inner">
@@ -135,24 +168,9 @@
               </section>
 
               <!-- Two -->
-                <section id="two" class="wrapper alt spotlight style2">
-                  <div class="inner">
-                    <a href="#" class="image">
-                      <picture>
-                        <source srcset="images/denis.webp" type="image/webp">
-                        <img src="images/denis.jpg" alt="Денис Ежков" />
-                      </picture>
-                    </a>
-                    <div class="content">
-                      <h2 class="major">Путь падавана. Как стать web-разработчиком и не поседеть?</h2>
-                      <p>Денис Ежков, Itech.group (Ульяновск)</p>
-                      <p>Динамика изменений в web-разработке одна из самых высоких. С чего начать и куда двигаться? Как не запутаться в технологических направлениях и понять их перспективы? Какие есть тренды в веб-разработке? Поговорим на эти и другие смежные темы.</p>
-                    </div>
-                  </div>
-                </section>
 
               <!-- Three -->
-                <section id="three" class="wrapper spotlight style3">
+                <section id="three" class="wrapper spotlight alt style3">
                   <div class="inner">
                     <a href="http://nikbelikov.ru/" class="image" target="_blank">
                       <picture>
@@ -169,21 +187,6 @@
                   </div>
                 </section>
 
-                <section id="three" class="wrapper spotlight alt style1">
-                  <div class="inner">
-                    <a href="#" class="image">
-                      <picture>
-                        <source srcset="images/dikmarov.webp" type="image/webp">
-                        <img src="images/dikmarov.jpg" alt="Артём Дикмаров" />
-                      </picture>
-                    </a>
-                    <div class="content">
-                      <h2>Сверхбыстрая вёрстка: от макета до Production</h2>
-                      <p>Артём Дикмаров, Simtech Development (Ульяновск)</p>
-                      <p>Максимальное ускорение своей работы. Как можно превысить все несуществующие лимиты в вёрстке сайтов? Как не потерять качество? Собственные кейсы, факапы и просто интересные истории.</p>
-                    </div>
-                  </div>
-                </section>
                 <section id="three" class="wrapper spotlight style2">
                   <div class="inner">
                     <a href="#" class="image" target="_blank">
@@ -198,7 +201,7 @@
                     </div>
                   </div>
                 </section>
-              <section id="" class="wrapper alt style3">
+              <section id="" class="wrapper style3 alt">
                 <div class="inner">
                   <h2 class="major">Спонсоры</h2>
                   <section class="features">
