--- a/index.html
+++ b/index.html
@@ -114,22 +114,23 @@
 
 
             <!-- Four -->
-              <section id="four" class="wrapper spotlight style2">
+              <section id="three" class="wrapper spotlight  style3">
                 <div class="inner">
-                  <a href="#" class="image">
+                  <a href="http://nikbelikov.ru/" class="image" target="_blank">
                     <picture>
-                      <source srcset="images/kostya.webp" type="image/webp">
-                      <img src="images/kostya.jpg" alt="Константин Макарычев" />
+                      <source srcset="images/nikbelikov.webp" type="image/webp">
+                      <img src="images/nikbelikov.jpg" alt="Николай Беликов" />
                     </picture>
                   </a>
                   <div class="content">
-                    <h2 class="major">Не быстрый старт с angular 2</h2>
-                    <p>Константин Макарычев, Provectus (Казань)</p>
-                    <p>Поговорим, как начать разрабатывать на angular 2, как настроить окружение и что делать с этим дальше. Помимо этого обсудим typescript и es6, другие фреймворки и всё такое.</p>
-                    <!-- <p>Описание</p> -->
+                    <h2>Немного о сжатии изображений</h2>
+                    <p>Николай Беликов, Restream (Ульяновск)</p>
+                    <p>Оптимизация растра - извечная проблема, но все же хочется поделиться некоторыми вещами, о которых почему-то многие молчат.</p>
+                     <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
                   </div>
                 </div>
               </section>
+
 
             <!-- Five -->
               <section id="five" class="wrapper alt spotlight style3">
@@ -148,6 +149,9 @@
                   </div>
                 </div>
               </section>
+
+
+
 
             <!-- Seven -->
               <section id="seven" class="wrapper spotlight style1">
@@ -170,22 +174,23 @@
               <!-- Two -->
 
               <!-- Three -->
-                <section id="three" class="wrapper spotlight alt style3">
-                  <div class="inner">
-                    <a href="http://nikbelikov.ru/" class="image" target="_blank">
-                      <picture>
-                        <source srcset="images/nikbelikov.webp" type="image/webp">
-                        <img src="images/nikbelikov.jpg" alt="Николай Беликов" />
-                      </picture>
-                    </a>
-                    <div class="content">
-                      <h2>Немного о сжатии изображений</h2>
-                      <p>Николай Беликов, Restream (Ульяновск)</p>
-                      <p>Оптимизация растра - извечная проблема, но все же хочется поделиться некоторыми вещами, о которых почему-то многие молчат.</p>
-                       <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
-                    </div>
-                  </div>
-                </section>
+
+              <section id="four" class="wrapper alt spotlight style2">
+              <div class="inner">
+                <a href="#" class="image">
+                  <picture>
+                    <source srcset="images/kostya.webp" type="image/webp">
+                    <img src="images/kostya.jpg" alt="Константин Макарычев" />
+                  </picture>
+                </a>
+                <div class="content">
+                  <h2 class="major">Не быстрый старт с angular 2</h2>
+                  <p>Константин Макарычев, Provectus (Казань)</p>
+                  <p>Поговорим, как начать разрабатывать на angular 2, как настроить окружение и что делать с этим дальше. Помимо этого обсудим typescript и es6, другие фреймворки и всё такое.</p>
+                  <!-- <p>Описание</p> -->
+                </div>
+              </div>
+            </section>
 
                 <section id="three" class="wrapper spotlight style2">
                   <div class="inner">
